# Practice_Notes

Python/: Lambda_Functions_Practice.ipynb  pyproject.toml  test.py
Python/DSPy/: check_out.py
Python/DSPy/__marimo__/session/: check_out.py.json
Python/Manim/First/: svt.py
Python/Manim/First/media/videos/svt/1080p60/partial_movie_files/DerivativeIntegralConnection/: partial_movie_file_list.txt
Python/Manim/media/videos/1080p60/partial_movie_files/CheckHealthDemo/: partial_movie_file_list.txt
Python/Notebooks/: Calendar.ipynb  Generators_Practice_Exercises.ipynb  Lambda_Functions_Practice.ipynb
Python/marimo/: first.py
Python/marimo/__marimo__/: first.html  first.ipynb
Python/marimo/__marimo__/session/: first.py.json
